@@ -17,11 +17,12 @@ except ImportError:
     INCLUDE_FUNCTIONAL_TESTS = False
 
 def suite():
-    from acct_mgr.tests import api, db, htfile, register
+    from acct_mgr.tests import api, db, htfile, model, register
     suite = unittest.TestSuite()
     suite.addTest(api.suite())
     suite.addTest(db.suite())
     suite.addTest(htfile.suite())
+    suite.addTest(model.suite())
     suite.addTest(register.suite())
     if INCLUDE_FUNCTIONAL_TESTS:
         from acct_mgr.tests.functional import suite as functional_suite
